fixed search bar alignment issue due to the addition of the social media icons

--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -132,6 +132,8 @@ header {
             
             label {
                 display: inline-block;
+                float: right;
+                margin-left: 10px;
 
                 &:before {
                     content: "\f002";
@@ -150,12 +152,11 @@ header {
             }
             input {
                 display: block;
-                position: absolute;
-                right: 80px;  
-                top: 3px;
+                position: relative;
                 width: 0;
                 padding: 0;
                 border: 0;
+                margin-top: 5px;
                 @include transition(all ease 0.3s);
                 
             }
